Revert "Fix small-screen overflow"

--- a/src/styles/partials/_responsive.sass
+++ b/src/styles/partials/_responsive.sass
@@ -67,8 +67,7 @@ img
     section#fullResume > article, section.blog-post.big > article, #BlogPostBrowser > article
         width: calc(variables.$large-width - variables.$margin-double)
     section.eresume > article, section.blog > article, section.about > article, section.contact > article, footer.Footer > nav, #fullResume
-        // Account for horizontal margins so sections fit within the viewport
-        width: calc(variables.$large-width - variables.$margin-double)
+        width: variables.$large-width
     button.MenuToggle, section.menu-hamburger-container
         display: none
     footer.Footer
@@ -112,8 +111,7 @@ img
     section#fullResume > article, section.blog-post.big > article, #BlogPostBrowser > article
         width: calc(variables.$xl-width - variables.$margin-double)
     section.eresume > article, section.blog > article, section.about > article, section.contact > article, footer.Footer > nav, #fullResume
-        // Account for horizontal margins so sections fit within the viewport
-        width: calc(variables.$xl-width - variables.$margin-double)
+        width: variables.$xl-width
     img
         width: calc(425px - variables.$margin-double)
         max-width: none
